--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -112,8 +112,8 @@ $jsonTree = json_encode($this->categories);
         <div id="payoutTab" class="tab-pane ">
 
             <div id="payoutyear" style="display: block; float: left; padding-right: 20px" class="d3linepath"></div>
-            <div id="pie" style="padding:50px; display:block; clear:left "></div>
-            <div style="display: block; float: left; " id="detailContainer"></div>
+            <div id="pie" style="clear:left;padding:50px; display:block;  "></div>
+            <div style="display: block; float: left; clear:left" id="detailContainer"></div>
 
         </div>
 
