--- a/application/modules/backend/views/scripts/index/index.phtml
+++ b/application/modules/backend/views/scripts/index/index.phtml
@@ -137,7 +137,7 @@ $jsonTree = json_encode($this->categories);
                 <button id="clearChartPanel">clear</button>
                 <div id="category-tree-container">
                 </div>
-            <div id="payoutCategoryLineChart"  style="width: 1000px; height: 1000px; display: block; float: right; overflow-y: auto">
+            <div id="payoutCategoryLineChart"  style="width: 1000px; height: 1000px; display: block; float: right; ">
                     
             </div>
         </div>
