--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -22,6 +22,11 @@
 ?>
 
 <style>
+
+  main#reg-page section#register-wrap {
+    z-index: 1000;
+  }
+
   @media (max-width:767px) {
     main#reg-page section#register-wrap {
       position: absolute;
