--- a/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/registerForm.phtml
@@ -22,6 +22,9 @@
 ?>
 
 <style>
+main#reg-page section#register-wrap {
+      z-index: 1000;
+}
 @media (max-width:767px) {
   main#reg-page section#register-wrap {
     position: absolute;
