backend: project category updated

--- a/application/modules/backend/views/scripts/categories/index.phtml
+++ b/application/modules/backend/views/scripts/categories/index.phtml
@@ -437,6 +437,7 @@
                 dl_pling_factor: {
                     title: 'Pling Factor',
                     type: 'input',
+                    defaultValue: '1',
                     create: true,
                     edit: true,
                     width: '8%'
