--- a/httpdocs/theme/flatui/less/product-page.less
+++ b/httpdocs/theme/flatui/less/product-page.less
@@ -74,7 +74,10 @@ out: ../css/product-page.css, sourcemap: true, compress: true
           #product-header-info-container {
             margin: 0;
             #product-header-title {
-              height: 85px;
+              padding-left: 100px;
+              height: auto;
+              min-height: 85px;
+              margin-bottom: 10px;
             }
             .product_category {
               float: left;
@@ -122,8 +125,11 @@ out: ../css/product-page.css, sourcemap: true, compress: true
                   }
 
                   > div {
-                    top: -65px;
+                    top: -68px;
                     font-size: 28px;
+                    width: 100%;
+                    padding: 0;
+                    text-align: center;
                   }
                 }
               }
