--- a/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
+++ b/application/modules/default/views/scripts/authorization/partials/loginForm.phtml
@@ -22,6 +22,11 @@
 ?>
 
 <style>
+
+  main#reg-page section#register-wrap {
+    z-index: 1000;
+  }
+
   @media (max-width:767px) {
     main#reg-page section#register-wrap {
       position: absolute;
@@ -48,6 +53,65 @@
       margin: 0;
     }
   }
+
+  .container-checkbox-remember-me input[type="checkbox"] {
+      opacity: 0;
+      position: absolute;
+  }
+
+  .container-checkbox-remember-me label {
+      position: relative;
+      display: inline-block;
+      /*16px width of fake checkbox + 6px distance between fake checkbox and text*/
+      padding-left: 22px;
+      height: 22px;
+      line-height: 22px;
+  }
+
+  .container-checkbox-remember-me label::before,
+  .container-checkbox-remember-me label::after {
+      position: absolute;
+      content: "";
+
+      /*Needed for the line-height to take effect*/
+      display: inline-block;
+  }
+
+  /*Outer box of the fake checkbox*/
+  .container-checkbox-remember-me label::before{
+      height: 16px;
+      width: 16px;
+      border: 1px solid;
+      left: 0px;
+      /*(24px line-height - 16px height of fake checkbox) / 2 - 1px for the border
+       *to vertically center it.
+       */
+      top: 3px;
+      border-radius: 4px;
+      border-color: #c2c2c2;
+  }
+
+  /*Checkmark of the fake checkbox*/
+  .container-checkbox-remember-me label::after {
+      height: 5px;
+      width: 9px;
+      border-left: 2px solid;
+      border-bottom: 2px solid;
+      transform: rotate(-45deg);
+      left: 4px;
+      top: 7px;
+  }
+
+  /*Hide the checkmark by default*/
+  .container-checkbox-remember-me input[type="checkbox"] + label::after {
+      content: none;
+  }
+
+  /*Unhide on the checked state*/
+  .container-checkbox-remember-me input[type="checkbox"]:checked + label::after {
+      content: "";
+  }
+
 </style>
 
 <div id="login-form-box" class="well">
