--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -97,6 +97,10 @@ $userRoleName = $helperUserRole->userRole();
 $helperCatXdgType = new Default_View_Helper_CatXdgType();
 $xdgTypeJson = Zend_Json::encode($helperCatXdgType->catXdgType($this->product->project_category_id));
 
+$isowner = false;
+if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->product->member_id){
+    $isowner = true;
+}
 ?>
 
     <link href="/theme/react/assets/css/get-it.css" type="text/css" rel="stylesheet"/>
@@ -335,7 +339,7 @@ $xdgTypeJson = Zend_Json::encode($helperCatXdgType->catXdgType($this->product->p
                                         }
                                      }
                                      echo '</span><!--end of topicslink-->';
-                                     if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->product->member_id){
+                                     if($isowner){
                                             $this->headLink()->appendStylesheet('/theme/flatui/css/select2.min.css');
                                             $this->headLink()->appendStylesheet('/theme/flatui/css/select2.custmized.css');
                                             $this->inlineScript()->appendFile('/theme/flatui/js/lib/select2.min.js');
@@ -376,8 +380,19 @@ $xdgTypeJson = Zend_Json::encode($helperCatXdgType->catXdgType($this->product->p
                                     <?php if (false === empty($this->product->source_url)):
                                         echo '<a target="_blank" href="' . $this->product->source_url . '" rel="nofollow">' . $this->product->source_url
                                             . ' <span class="fa fa-external-link"></span></a>';
-                                    endif;
+                                        //elseif ($isowner) :
+                                            else :
+                                            echo '<span class="source" > Add the source-code for this project on </span><a href="https://git.opendesktop.org/'.$this->product->username.'">git.opendesktop.org</a>';                                                                            
+                                       endif;
                                     ?>
+                                    <p class="light small">
+                                    <?php if (false === empty($this->product->gitlab_project_id)):
+                                        echo '<img src="/theme/react/assets/img/logo-opencode.png" width="15"> <a target="_blank" href="' . $this->gitlab_project['web_url'] . '" rel="nofollow">' . $this->gitlab_project['web_url']
+                                            . ' <span class="fa fa-external-link"></span></a>';
+                                        
+                                       endif;
+                                    ?>
+                                    
 
 
                                 </div>
@@ -524,11 +539,25 @@ $xdgTypeJson = Zend_Json::encode($helperCatXdgType->catXdgType($this->product->p
                             <div id="product-about" class="col-lg-9 col-md-9 col-sm-9 col-xs-12">
 
                                 <div>
+                                    <?php
+                                        if($this->product->is_gitlab_project && $this->product->use_gitlab_project_readme && null != $this->gitlab_project['readme_url']) {
+                                    ?>
+                                    <article>
+                                        <b>Description:</b> <br/><br/>
+                                        <?=$this->readme ?>
+                                    </article>
+                                    <?php
+                                        } else {
+                                    ?>
                                     <article>
                                         <b>Description:</b> <br/><br/>
                                         <?=$this->product->description ?>
                                     </article>
-
+                                    
+                                    <?php
+                                        }
+                                    ?>
+                                    
 
 
                                         <?php
@@ -893,6 +922,33 @@ $xdgTypeJson = Zend_Json::encode($helperCatXdgType->catXdgType($this->product->p
                         <?php echo $this->render('partials/sidebarCcLicense.phtml'); ?>
 
                         <?php echo $this->render('product/partials/details.phtml'); ?>
+                        
+                        <!-- gitlab issues -->
+                        <?php 
+                            if($this->product->show_gitlab_project_issues) {
+                                $helpPrintDate = new Default_View_Helper_PrintDate();
+                        ?>
+                        <div class="prod-widget-box right details">
+                            <span class="title"> Git Issues </span>
+                                
+                            <?php
+                              $issues = $this->gitlab_project_issues;
+                              $i = 0;
+                              foreach ($issues as $issue){
+                                  $date = date('Y-m-d H:i:s', strtotime($issue['created_at']));
+                                  echo '<div class="commentstore"><a href="'.$issue['web_url'].'"><span class="title">' . $issue['title'] . '</span></a><div class="newsrow"><span class="date">'.$helpPrintDate->printDate($date).'</span></div></div>';
+                                  $i ++;
+                                  if($i>5) {
+                                      break;
+                                  }
+                              }
+                              
+                              ?>
+                                
+                                
+                            <span class="center"><a href="<?= $this->gitlab_project_issues_url ?>" target="_NEW">Show all <?= count($issues) ?> Issues</a></span>
+                        </div>
+                        <?php } ?>
 
                       <?php echo $this->render('product/partials/tags.phtml'); ?>
 
