--- a/httpdocs/theme/backend/css/backend/stati.css
+++ b/httpdocs/theme/backend/css/backend/stati.css
@@ -199,7 +199,7 @@ table.tablestati td.number {
     font-weight: bold;
     display: block;         
     min-width: 25px;min-height: 15px;
-    
+    cursor: default;  
 }
 
 /*multiline.css*/
