--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -69,12 +69,6 @@ $isSupporter = $this->stat['donationIssupporter'];
                                 </figure>
                                 
                                 <h1><span class="lightblue"><?php echo $this->member->username; ?></span>    
-                                 <span style="padding-left: 20px">
-                                 <a href="https://git.opendesktop.org/<?php echo $this->member->username;?>">
-                                 <img src="/theme/react/assets/img/logo-opencode.png" style="width: 25px; height: 25px; ">
-                                    <span style="font-size: 16px; font-weight: normal;">git-userpage </span>
-                               </a>
-                               </span>
                                </h1>
                                 <?php if($this->member->firstname ) :?>
                                 <span class="glyphicon glyphicon-user"></span>
@@ -469,6 +463,17 @@ $isSupporter = $this->stat['donationIssupporter'];
 
                                 <div class="box-content">
 
+                                    <div class="info-div">
+                                        <div class="label">
+                                            <img src="/theme/react/assets/img/logo-opencode.png" style="width: 20px; height: 20px; ">
+                                        </div>
+                                        <div class="text">
+                                    
+                                            <a href="https://git.opendesktop.org/<?php echo $this->member->username;?>">
+                                                <span style="font-size: 16px; font-weight: normal;">git-userpage </span>
+                                            </a>
+                                        </div>
+                                    </div>
 
                                     <?php if (false === empty($this->member->link_website)): ?>
                                         <div class="info-div">
