react apps -  cn.pling.com -> cn.opendesktop.org

--- a/httpdocs/theme/react/assets/less/header.less
+++ b/httpdocs/theme/react/assets/less/header.less
@@ -284,6 +284,7 @@ out: ../css/header.css, sourcemap: true, compress: true
       #site-header-logo-container {
         margin: 0 auto;
         position: relative;
+        max-height: 90px!important;
       }
 
       #site-header-store-name-container {
