--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -465,7 +465,7 @@ $isSupporter = $this->stat['donationIssupporter'];
 
                                     <div class="info-div">
                                         <div class="label">
-                                            <img src="/theme/react/assets/img/logo-opencode.png" style="width: 20px; height: 20px; ">
+                                            <img src="/images_sys/gitlab.png" style="width: 20px; height: 20px; ">
                                         </div>
                                         <div class="text">
                                     
