--- a/application/modules/default/views/scripts/user/aboutme.phtml
+++ b/application/modules/default/views/scripts/user/aboutme.phtml
@@ -470,7 +470,7 @@ $isSupporter = $this->stat['donationIssupporter'];
                                         <div class="text">
                                     
                                             <a href="https://git.opendesktop.org/<?php echo $this->member->username;?>">
-                                                <span style="font-size: 16px; font-weight: normal;">git-userpage </span>
+                                                <span style="font-size: 16px; font-weight: normal;">git-opendesktop </span>
                                             </a>
                                         </div>
                                     </div>
