--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -376,23 +376,16 @@ if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->produ
                                      ?>
 
                                     <p class="light small">
+                                    <span class="source">Source (required if based on other people's work): </span>
                                     <?php if (false === empty($this->product->gitlab_project_id)) {
+                                        $url = $this->gitlab_project['web_url'];
+                                        $url = str_replace("http;//", "https://", $url);
                                         echo '<img src="/images_sys/gitlab.png" width="15"> <a target="_blank" href="' . $this->gitlab_project['web_url'] . '" rel="nofollow">' . $this->gitlab_project['web_url']
                                             . ' <span class="fa fa-external-link"></span></a>';
-                                        
-                                    
                                     } else if (false === empty($this->product->source_url)) {
-                                    ?>
-                                    <p class="light small">
-                                    <span class="source">Source (required if based on other people's work): </span>
-                                    <?php
                                         echo '<a target="_blank" href="' . $this->product->source_url . '" rel="nofollow">' . $this->product->source_url
                                             . ' <span class="fa fa-external-link"></span></a>';
                                     } else {
-                                    ?>
-                                    <p class="light small">
-                                    <span class="source">Source (required if based on other people's work): </span>
-                                    <?php
                                             echo '<span class="source" > Add the source-code for this project on </span><a href="https://git.opendesktop.org/'.$this->product->username.'">git.opendesktop.org</a>';                                                                                                                    
                                     }
                                     ?>
