--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -379,7 +379,7 @@ if(Zend_Auth::getInstance()->hasIdentity() && $identity->member_id==$this->produ
                                     <span class="source">Source (required if based on other people's work): </span>
                                     <?php if (false === empty($this->product->gitlab_project_id)) {
                                         $url = $this->gitlab_project['web_url'];
-                                        $url = str_replace("http;//", "https://", $url);
+                                        $url = str_replace("http://", "https://", $url);
                                         
                                         echo '<img src="/images_sys/gitlab.png" width="15"> <a target="_blank" href="' . $url . '" rel="nofollow">' . $url
                                             . ' <span class="fa fa-external-link"></span></a>';
