--- a/application/modules/default/views/scripts/partials/header/template.phtml
+++ b/application/modules/default/views/scripts/partials/header/template.phtml
@@ -382,6 +382,7 @@ echo $this->render('partials/header/metaheader.phtml');
     echo Zend_Json::encode($redirectString);} ?>;
     var json_serverUri = <?php echo Zend_Json::encode($_SERVER["REQUEST_URI"]);?>;
     var json_member = <?php if( $auth->hasIdentity() ) {echo Zend_Json::encode($member);} else { echo Zend_Json::encode(null);}?>;
+    var json_member_avatar = <?php if( $auth->hasIdentity() ) {echo Zend_Json::encode($this->image($member->profile_image_url));} else { echo Zend_Json::encode(null);}?>;
     var json_template = <?php echo Zend_Json::encode($this->template); ?>;
     var json_serverUrl = <?php echo Zend_Json::encode($serverUrl); ?>;
     var json_baseurl = <?php echo  Zend_Json::encode($baseurl);?>;
